--- a/micro_volunteer/html/homepage.html
+++ b/micro_volunteer/html/homepage.html
@@ -77,7 +77,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="images/volunteer.png" alt="Los Angeles" style="width:100%;">
+                    <img src="css/images/volunteer.png" alt="Los Angeles" style="width:100%;">
                 </div>
 
                 <div class="item">
